# StealWordsMP

./: .gitignore  CMakeLists.txt  br.bat  build_client.bat  build_server.bat  clean.bat  gen.bat  makeclass.ps1  rb.bat  run.bat  run_client.bat  run_server.bat  todo
assets/: letter_c.ase  letter_i.ase  letter_k.ase  letter_l.ase  letter_o.ase  letter_p.ase  letter_t.ase  letter_x.ase  letter_y.ase
assets/art/: letter_a.ase  letter_b.ase  letter_back.ase  letter_d.ase  letter_e.ase  letter_f.ase  letter_g.ase  letter_h.ase  letter_j.ase  letter_m.ase  letter_n.ase  letter_q.ase  letter_r.ase  letter_s.ase  letter_u.ase  letter_v.ase  letter_w.ase  letter_z.ase
assets/wordlists/: 10sort.txt  11sort.txt  12sort.txt  13sort.txt  14sort.txt  15sort.txt  2sort.txt  3sort.txt  4sort.txt  5sort.txt  6sort.txt  7sort.txt  8sort.txt  9sort.txt
src/: client.cpp  client.h  main.cpp  server.cpp  server.h
